Managing Conversation History

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "8f037171",
    "metadata": {},
    "outputs": [
@@ -43,25 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "4dd1f9cb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"Hi Bob! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, id='run--e1a7025e-f03e-4678-9227-d9c0b361d40d-0', usage_metadata={'input_tokens': 6, 'output_tokens': 19, 'total_tokens': 25, 'input_token_details': {'cache_read': 0}})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.messages import HumanMessage\n",
-    "\n",
-    "model.invoke([HumanMessage(content=\"Hi! I'm Bob\")])"
+    "\n"
    ]
   },
   {
@@ -116,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5625e4fe",
    "metadata": {},
    "outputs": [],
@@ -250,11 +238,225 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "19a03fe0",
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "41c6bd09",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## https://python.langchain.com/docs/tutorials/chatbot/#prompt-templates"
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "\n",
+    "prompt_template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You talk like a pirate. Answer all questions to the best of your ability.\",\n",
+    "        ),\n",
+    "        MessagesPlaceholder(variable_name=\"messages\"),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d014eb18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def call_model(state: MessagesState):\n",
+    "    prompt = prompt_template.invoke(state)\n",
+    "    response = model.invoke(prompt)\n",
+    "    return {\"messages\": response}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0983a7ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow = StateGraph(state_schema=MessagesState)\n",
+    "workflow.add_edge(START, \"model\")\n",
+    "workflow.add_node(\"model\", call_model)\n",
+    "\n",
+    "\n",
+    "memory = MemorySaver()\n",
+    "app = workflow.compile(checkpointer=memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "264ec5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Ahoy there, Jim! A pleasure to meet ye, savvy? I be at yer service, ready to answer yer questions and share me wisdom o' the seven seas. What be on yer mind, matey?\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = {\"configurable\": {\"thread_id\": \"abc345\"}}\n",
+    "query = \"Hi! I'm Jim.\"\n",
+    "\n",
+    "input_messages = [HumanMessage(query)]\n",
+    "output = app.invoke({\"messages\": input_messages}, config)\n",
+    "output[\"messages\"][-1].pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8a6be0b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Shiver me timbers! Yer name be Jim, as ye told me just a moment ago. I be forgetful at times, but not *that* forgetful, savvy?\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"What is my name?\"\n",
+    "\n",
+    "input_messages = [HumanMessage(query)]\n",
+    "output = app.invoke({\"messages\": input_messages}, config)\n",
+    "output[\"messages\"][-1].pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b39c6de3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a helpful assistant. Answer all questions to the best of your ability in {language}.\",\n",
+    "        ),\n",
+    "        MessagesPlaceholder(variable_name=\"messages\"),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bcee852a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Sequence\n",
+    "\n",
+    "from langchain_core.messages import BaseMessage\n",
+    "from langgraph.graph.message import add_messages\n",
+    "from typing_extensions import Annotated, TypedDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4fedb733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class State(TypedDict):\n",
+    "    messages: Annotated[Sequence[BaseMessage], add_messages]\n",
+    "    language: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "085854ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "workflow = StateGraph(state_schema=State)\n",
+    "\n",
+    "\n",
+    "def call_model(state: State):\n",
+    "    prompt = prompt_template.invoke(state)\n",
+    "    response = model.invoke(prompt)\n",
+    "    return {\"messages\": [response]}\n",
+    "\n",
+    "\n",
+    "workflow.add_edge(START, \"model\")\n",
+    "workflow.add_node(\"model\", call_model)\n",
+    "\n",
+    "memory = MemorySaver()\n",
+    "app = workflow.compile(checkpointer=memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8f78123c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "¡Hola, Bob! ¿En qué puedo ayudarte hoy?\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = {\"configurable\": {\"thread_id\": \"abc456\"}}\n",
+    "query = \"Hi! I'm Bob.\"\n",
+    "language = \"Spanish\"\n",
+    "\n",
+    "input_messages = [HumanMessage(query)]\n",
+    "output = app.invoke(\n",
+    "    {\"messages\": input_messages, \"language\": language},\n",
+    "    config,\n",
+    ")\n",
+    "output[\"messages\"][-1].pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ab5a661a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Tu nombre es Bob.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"What is my name?\"\n",
+    "\n",
+    "input_messages = [HumanMessage(query)]\n",
+    "output = app.invoke(\n",
+    "    {\"messages\": input_messages},\n",
+    "    config,\n",
+    ")\n",
+    "output[\"messages\"][-1].pretty_print()"
    ]
   }
  ],
