added title and output strcuture, wrapped output text

--- a/scientific-paper-analyser.ipynb
+++ b/scientific-paper-analyser.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "id": "fdef6fb8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "id": "7fc551b6",
    "metadata": {},
    "outputs": [],
@@ -42,14 +42,20 @@
     ")\n",
     "\n",
     "user_prompt = HumanMessagePromptTemplate.from_template(\n",
-    "    \"You are tasked with creating a simplified version for high school students from this paper : {paper}\",\n",
+    "    \"\"\"You are tasked with creating a simplified version for high school students from this paper \n",
+    "    ----\n",
+    "    {paper}\n",
+    "    ----\n",
+    "    then, Generate a creative title for the simplified paper. Also extract related terms and research areas\n",
+    "    \n",
+    "    \"\"\",\n",
     "    input_variables=['paper']\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "id": "cdb55ee8",
    "metadata": {},
    "outputs": [
@@ -59,7 +65,13 @@
      "text": [
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      "You are tasked with creating a simplified version for high school students from this paper : TEST STRING\n"
+      "You are tasked with creating a simplified version for high school students from this paper \n",
+      "    ----\n",
+      "    TEST STRING\n",
+      "    ----\n",
+      "    then, Generate a creative title for the simplified paper. Also extract related terms and research areas\n",
+      "\n",
+      "    \n"
      ]
     }
    ],
@@ -69,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "id": "ef74ea37",
    "metadata": {},
    "outputs": [],
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "id": "ca9d3076",
    "metadata": {},
    "outputs": [],
@@ -98,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 96,
    "id": "9448f9a4",
    "metadata": {},
    "outputs": [],
@@ -137,6 +149,124 @@
    ],
    "source": [
     "print(simplified_paper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "ed06eb56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "class Paper(BaseModel):\n",
+    "    original_paper: str = Field(description=\"The original scientific paper\")\n",
+    "    simplified_paper: str = Field(description=\"The simplified scientific paper\")\n",
+    "    simplified_paper_title: str = Field(description=(\n",
+    "        \"The title for the simplified paper\"\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "6a4b9ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structured_llm = chat_model.with_structured_output(Paper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "061737d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain_three = (\n",
+    "    {\"paper\": lambda x: x[\"paper\"]}\n",
+    "    | first_prompt\n",
+    "    | structured_llm\n",
+    "    | {\n",
+    "        \"original_paper\": lambda x: x.original_paper,\n",
+    "        \"simplified_paper\": lambda x: x.simplified_paper,\n",
+    "        \"simplified_paper_title\": lambda x: x.simplified_paper_title\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "fc59a458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = chain_three.invoke({\"paper\": paper})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "57a22ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================================================================================================\n",
+      "🔍 Output from chain_three:\n",
+      "======================================================================================================================================================\n",
+      "\n",
+      "📄 Original Paper:\n",
+      "\n",
+      "The human gastrointestinal tract harbors a complex and dynamic population of microorganisms known as the gut microbiota.  These microbes perform\n",
+      "essential functions including aiding digestion, regulating immune responses, and synthesizing vitamins.  Disruptions to this microbial community,\n",
+      "termed dysbiosis, have been linked to a range of diseases such as obesity, type 2 diabetes, inflammatory bowel disease, and even neurological\n",
+      "disorders.  Recent advances in sequencing technologies have enabled researchers to better understand the diversity and functional capacity of the gut\n",
+      "microbiome, opening avenues for novel therapeutic strategies such as probiotics, prebiotics, and fecal microbiota transplantation.\n",
+      "\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "📝 Simplified Paper Title:\n",
+      "\n",
+      "Your Gut Buddies: How Bacteria Affect Your Health\n",
+      "\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "🔬 Simplified Paper:\n",
+      "\n",
+      "Our digestive system is home to trillions of tiny organisms, mainly bacteria, which we collectively call the gut microbiota. These bacteria help us\n",
+      "digest food, train our immune system, and even make vitamins. When the balance of these bacteria is disturbed, a condition called dysbiosis, it can\n",
+      "lead to diseases like obesity, type 2 diabetes, and inflammatory bowel disease. Scientists are now using new technologies to study these bacteria and\n",
+      "are exploring treatments like probiotics and prebiotics that can help restore a healthy gut.\n",
+      "\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "======================================================================================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import textwrap\n",
+    "\n",
+    "WRAP_WIDTH = 150  # Adjust based on your terminal size\n",
+    "\n",
+    "def wrapped_print(title, content):\n",
+    "    print(f\"{title}\\n\")\n",
+    "    print(textwrap.fill(content, width=WRAP_WIDTH))\n",
+    "    print(\"\\n\" + \"-\" * WRAP_WIDTH)\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * WRAP_WIDTH)\n",
+    "print(\"🔍 Output from chain_three:\")\n",
+    "print(\"=\" * WRAP_WIDTH + \"\\n\")\n",
+    "\n",
+    "wrapped_print(\"📄 Original Paper:\", out[\"original_paper\"])\n",
+    "wrapped_print(\"📝 Simplified Paper Title:\", out[\"simplified_paper_title\"])\n",
+    "wrapped_print(\"🔬 Simplified Paper:\", out[\"simplified_paper\"])\n",
+    "\n",
+    "print(\"=\" * WRAP_WIDTH)\n"
    ]
   }
  ],
