added a new model

--- a/few-shot-prompting.ipynb
+++ b/few-shot-prompting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "923403f4",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "fa6992ed",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "73822426",
    "metadata": {},
    "outputs": [],
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d1fb72d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo_id = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+    "repo_id = \"EleutherAI/gpt-j-6b\"\n",
     "import os\n",
-    "# chat_model = HuggingFaceEndpoint(\n",
-    "#     repo_id=repo_id,\n",
-    "#     temperature=0.5,\n",
-    "# )\n",
+    "llm = HuggingFaceEndpoint(\n",
+    "    repo_id=repo_id,\n",
+    "    temperature=0.5,\n",
+    ")\n",
     "llm_chain = prompt | chat_model"
    ]
   },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "4c178083",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "ed3569d9",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "5d3cd8d7",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "328bedbf",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "a501eb19",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "f3174fa3",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "b25e6744",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "f75b361a",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "aa004d28",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='# Aurelio AI Overview\\n\\n*   **Summary:** Aurelio AI is an AI company specializing in language AI tooling for AI engineers. They offer open-source frameworks, an AI platform, and development services.\\n\\n*   **Key Activities:**\\n    *   Developing open-source frameworks like Semantic Router and Semantic Chunkers.\\n    *   Providing an AI Platform with tools for AI engineers.\\n    *   Offering development services to help organizations bring AI tech to market.\\n\\n*   **Expertise:**\\n    *   Building AI agents.\\n    *   Information retrieval.\\n    *   LangChain ecosystem (LangChain Experts since September 2024).' additional_kwargs={} response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []} id='run--e31f31ee-4cc7-4266-8764-cc16bb3b1f85-0' usage_metadata={'input_tokens': 207, 'output_tokens': 137, 'total_tokens': 344, 'input_token_details': {'cache_read': 0}}\n"
+      "content='# Aurelio AI Overview\\n\\nAurelio AI is an AI company that specializes in tooling for AI engineers, with a focus on language AI.\\n\\n*   **Expertise:** They have strong expertise in building AI agents and a strong background in information retrieval.\\n*   **Open Source Frameworks:** They are behind several open-source frameworks, including Semantic Router and Semantic Chunkers.\\n*   **AI Platform:** They offer an AI Platform that provides engineers with tools to help them build with AI.\\n*   **Development Services:** They provide development services to help other organizations bring their AI tech to market.\\n*   **LangChain Experts:** They became LangChain Experts in September 2024.\\n\\nIn summary, Aurelio AI offers a range of services and tools centered around language AI, including open-source frameworks, an AI platform, and development services, leveraging their expertise in AI agents, information retrieval, and the LangChain ecosystem.' additional_kwargs={} response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []} id='run--5dd0f30a-0bbd-4d64-83b5-01cae73d99f7-0' usage_metadata={'input_tokens': 207, 'output_tokens': 192, 'total_tokens': 399, 'input_token_details': {'cache_read': 0}}\n"
      ]
     }
    ],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "0a861255",
    "metadata": {},
    "outputs": [
@@ -290,17 +290,15 @@
       "text/markdown": [
        "# Aurelio AI Overview\n",
        "\n",
-       "*   **Summary:** Aurelio AI is an AI company specializing in language AI tooling for AI engineers. They offer open-source frameworks, an AI platform, and development services.\n",
+       "Aurelio AI is an AI company that specializes in tooling for AI engineers, with a focus on language AI.\n",
        "\n",
-       "*   **Key Activities:**\n",
-       "    *   Developing open-source frameworks like Semantic Router and Semantic Chunkers.\n",
-       "    *   Providing an AI Platform with tools for AI engineers.\n",
-       "    *   Offering development services to help organizations bring AI tech to market.\n",
+       "*   **Expertise:** They have strong expertise in building AI agents and a strong background in information retrieval.\n",
+       "*   **Open Source Frameworks:** They are behind several open-source frameworks, including Semantic Router and Semantic Chunkers.\n",
+       "*   **AI Platform:** They offer an AI Platform that provides engineers with tools to help them build with AI.\n",
+       "*   **Development Services:** They provide development services to help other organizations bring their AI tech to market.\n",
+       "*   **LangChain Experts:** They became LangChain Experts in September 2024.\n",
        "\n",
-       "*   **Expertise:**\n",
-       "    *   Building AI agents.\n",
-       "    *   Information retrieval.\n",
-       "    *   LangChain ecosystem (LangChain Experts since September 2024)."
+       "In summary, Aurelio AI offers a range of services and tools centered around language AI, including open-source frameworks, an AI platform, and development services, leveraging their expertise in AI agents, information retrieval, and the LangChain ecosystem."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
