--- a/chat-memory.ipynb
+++ b/chat-memory.ipynb
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "6f479f45",
    "metadata": {},
    "outputs": [],
@@ -1221,6 +1221,59 @@
     "        {\"query\": msg},\n",
     "        config={\"session_id\": \"id_123\", \"llm\": llm}\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "ee16fb17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='James and Akram introduced themselves. James is researching conversational memory and is currently looking at `ConversationBufferMemory` and `ConversationBufferWindowMemory` in Langchain. Akram offered to help, outlining several aspects James might be interested in, such as how they work internally, their use cases, limitations, comparison to other memory types, usage examples, and the trade-offs between memory size and performance. James confirmed that buffer memory stores the entire conversation and buffer window memory stores the last k messages, dropping the rest. Akram affirmed this, explaining that `ConversationBufferMemory` is the simplest form of conversational memory, accumulating the entire conversation history as a single string with each new input and output appended, while `ConversationBufferWindowMemory` maintains a sliding window of the *k* most recent messages, discarding the oldest messages once the window size is exceeded. Akram then offered to answer specific questions about how `ConversationBufferWindowMemory` manages its window and decides which messages to drop, and to elaborate on the advantages and disadvantages of this approach compared to storing the entire conversation.', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_map[\"id_123\"].messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2c527400",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Your name is James.', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []}, id='run--9a0d91f3-1537-4e84-aa65-6a5cc0c8e9a2-0', usage_metadata={'input_tokens': 231, 'output_tokens': 6, 'total_tokens': 237, 'input_token_details': {'cache_read': 0}})"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline_with_history.invoke(\n",
+    "    {\"query\": \"What is my name again?\"},\n",
+    "    config={\"session_id\": \"id_123\", \"llm\": llm}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9852ee30",
+   "metadata": {},
+   "source": [
+    "implemented the `ConversationSummaryMemory` type using the `RunnableWithMessageHistory` class."
    ]
   }
  ],
