--- a/agent-executor.ipynb
+++ b/agent-executor.ipynb
@@ -276,6 +276,315 @@
     "    tool_call_id=tool_call.tool_calls[0][\"id\"]\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "54219a13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'function_call': {'name': 'add', 'arguments': '{\"y\": 10.0, \"x\": 10.0}'}}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []}, id='run--ce07c526-b0c1-4c41-86f4-4a4a53643c17-0', tool_calls=[{'name': 'add', 'args': {'y': 10.0, 'x': 10.0}, 'id': 'f4f902ee-84bc-400a-b1ea-3b07f8e357be', 'type': 'tool_call'}], usage_metadata={'input_tokens': 161, 'output_tokens': 5, 'total_tokens': 166, 'input_token_details': {'cache_read': 0}})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = agent.invoke({\n",
+    "    \"input\": \"What is 10 + 10\",\n",
+    "    \"chat_history\": [],\n",
+    "    \"agent_scratchpad\": [tool_call, tool_exec]\n",
+    "})\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb3ccc2f",
+   "metadata": {},
+   "source": [
+    "Despite having the answer in our `agent_scratchpad`, the LLM still tries to use the tool\n",
+    "_again_. This behaviour happens because we bonded the tools to the LLM with\n",
+    "`tool_choice=\"any\"`. When we set `tool_choice` to `\"any\"` or `\"required\"`, we tell the\n",
+    "LLM that it _MUST_ use a tool, i.e., it cannot provide a final answer.\n",
+    "\n",
+    "There's two options to fix this:\n",
+    "\n",
+    "1. Set `tool_choice=\"auto\"` to tell the LLM that it can choose to use a tool or provide\n",
+    "a final answer.\n",
+    "\n",
+    "2. Create a `final_answer` tool - we'll explain this shortly.\n",
+    "\n",
+    "First, let's try option **1**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7c3b20a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent: RunnableSerializable = (\n",
+    "    {\n",
+    "        \"input\": lambda x: x[\"input\"],\n",
+    "        \"chat_history\": lambda x: x[\"chat_history\"],\n",
+    "        \"agent_scratchpad\": lambda x: x.get(\"agent_scratchpad\", [])\n",
+    "    }\n",
+    "    | prompt\n",
+    "    | llm.bind_tools(tools, tool_choice=\"auto\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6bfdfa6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'function_call': {'name': 'add', 'arguments': '{\"y\": 10.0, \"x\": 10.0}'}}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []}, id='run--2be30792-292d-40da-aa11-86d84d8f5b35-0', tool_calls=[{'name': 'add', 'args': {'y': 10.0, 'x': 10.0}, 'id': 'ac82218b-b2c1-4cef-82f9-f175d6cdc704', 'type': 'tool_call'}], usage_metadata={'input_tokens': 145, 'output_tokens': 5, 'total_tokens': 150, 'input_token_details': {'cache_read': 0}})"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool_call = agent.invoke({\"input\": \"What is 10 + 10\", \"chat_history\": []})\n",
+    "tool_call"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1845455a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool_output = name2tool[tool_call.tool_calls[0][\"name\"]](\n",
+    "    **tool_call.tool_calls[0][\"args\"]\n",
+    ")\n",
+    "\n",
+    "tool_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "dc5391cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='10 + 10 is 20.0', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []}, id='run--9b8a2213-57ba-49f5-8c73-4ff88a5ac9dc-0', usage_metadata={'input_tokens': 161, 'output_tokens': 13, 'total_tokens': 174, 'input_token_details': {'cache_read': 0}})"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool_exec = ToolMessage(\n",
+    "    content=f\"The {tool_call.tool_calls[0]['name']} tool returned {tool_output}\",\n",
+    "    tool_call_id=tool_call.tool_calls[0][\"id\"]\n",
+    ")\n",
+    "\n",
+    "out = agent.invoke({\n",
+    "    \"input\": \"What is 10 + 10\",\n",
+    "    \"chat_history\": [],\n",
+    "    \"agent_scratchpad\": [tool_call, tool_exec]\n",
+    "})\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cbfea76",
+   "metadata": {},
+   "source": [
+    "We now have the final answer in the `content` field! This method is perfectly\n",
+    "functional; however, we recommend option **2** as it provides more control over the\n",
+    "agent's output.\n",
+    "\n",
+    "There are several reasons that option **2** can provide more control, those are:\n",
+    "\n",
+    "* It removes the possibility of an agent using the direct `content` field when it is not\n",
+    "appropriate; for example, some LLMs (particularly smaller ones) may try to use the\n",
+    "`content` field when using a tool.\n",
+    "\n",
+    "* We can enforce a specific structured output in our answers. Structured outputs are\n",
+    "handy when we require particular fields for downstream code or multi-part answers. For\n",
+    "example, a RAG agent may return a natural language answer and a list of sources used to\n",
+    "generate that answer.\n",
+    "\n",
+    "To implement option **2**, we must create a `final_answer` tool. We will add a\n",
+    "`tools_used` field to give our output some structure—in a real-world use case, we\n",
+    "probably wouldn't want to generate this field, but it's useful for our example here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "04f6dc9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def final_answer(answer: str, tools_used: list[str]) -> str:\n",
+    "    \"\"\"Use this tool to provide a final answer to the user.\n",
+    "    The answer should be in natural language as this will be provided\n",
+    "    to the user directly. The tools_used must include a list of tool\n",
+    "    names that were used within the `scratchpad`.\n",
+    "    \"\"\"\n",
+    "    return {\"answer\": answer, \"tools_used\": tools_used}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceb0479f",
+   "metadata": {},
+   "source": [
+    "Our `final_answer` tool _doesn't_ necessarily need to do anything; in this example,\n",
+    "we're using it purely to structure our final response. We can now add this tool to our\n",
+    "agent:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6212867e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tools = [final_answer, add, subtract, multiply, exponentiate]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "af5efe24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we need to update our name2tool mapping too\n",
+    "name2tool = {tool.name: tool.func for tool in tools}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a37707f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent: RunnableSerializable = (\n",
+    "    {\n",
+    "        \"input\": lambda x: x[\"input\"],\n",
+    "        \"chat_history\": lambda x: x[\"chat_history\"],\n",
+    "        \"agent_scratchpad\": lambda x: x.get(\"agent_scratchpad\", [])\n",
+    "    }\n",
+    "    | prompt\n",
+    "    | llm.bind_tools(tools, tool_choice=\"any\")  # we're forcing tool use again\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d03ba54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'add',\n",
+       "  'args': {'y': 10.0, 'x': 10.0},\n",
+       "  'id': '0b49308f-6a22-4952-ad87-4c6bb5ddbcd3',\n",
+       "  'type': 'tool_call'}]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool_call = agent.invoke({\"input\": \"What is 10 + 10\", \"chat_history\": []})\n",
+    "tool_call.tool_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "cc081693",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tool_out = name2tool[tool_call.tool_calls[0][\"name\"]](\n",
+    "    **tool_call.tool_calls[0][\"args\"]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d19c547a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tool_exec = ToolMessage(\n",
+    "    content=f\"The {tool_call.tool_calls[0]['name']} tool returned {tool_out}\",\n",
+    "    tool_call_id=tool_call.tool_calls[0][\"id\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3325a92b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'function_call': {'name': 'final_answer', 'arguments': '{\"tools_used\": [\"add\"], \"answer\": \"The answer is 20.0\"}'}}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []}, id='run--5d96c0e3-5b54-46ac-917b-44541c2ce90a-0', tool_calls=[{'name': 'final_answer', 'args': {'tools_used': ['add'], 'answer': 'The answer is 20.0'}, 'id': '2e09754f-603b-443d-a4b5-ba9b42fc4d32', 'type': 'tool_call'}], usage_metadata={'input_tokens': 231, 'output_tokens': 16, 'total_tokens': 247, 'input_token_details': {'cache_read': 0}})"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = agent.invoke({\n",
+    "    \"input\": \"What is 10 + 10\",\n",
+    "    \"chat_history\": [],\n",
+    "    \"agent_scratchpad\": [tool_call, tool_exec]\n",
+    "})\n",
+    "out"
+   ]
   }
  ],
  "metadata": {
