Custom agent executor

--- a/agent-executor.ipynb
+++ b/agent-executor.ipynb
@@ -585,6 +585,167 @@
     "})\n",
     "out"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f3ab83c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'final_answer',\n",
+       "  'args': {'tools_used': ['add'], 'answer': 'The answer is 20.0'},\n",
+       "  'id': '2e09754f-603b-443d-a4b5-ba9b42fc4d32',\n",
+       "  'type': 'tool_call'}]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.tool_calls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "648fbcba",
+   "metadata": {},
+   "source": [
+    "### Building a Custom Agent Execution Loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7801db3f",
+   "metadata": {},
+   "source": [
+    "We've worked through each step of our agent code, but it doesn't run without us running\n",
+    "every step. We must write a class to handle all the logic we just worked through."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6381d554",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bac455c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomAgentExecutor:\n",
+    "    chat_history: list[BaseMessage]\n",
+    "    def __init__(self, max_iterations: int = 3):\n",
+    "        self.chat_history = []\n",
+    "        self.max_iterations = max_iterations\n",
+    "        self.agent : RunnableSerializable = (\n",
+    "            {\n",
+    "                \"input\": lambda x: x[\"input\"],\n",
+    "                \"chat_history\": lambda x: x[\"chat_history\"],\n",
+    "                \"agent_scratchpad\": lambda x: x.get(\"agent_scratchpad\", [])\n",
+    "            }\n",
+    "            | prompt\n",
+    "            | llm.bind_tools(tools, tool_choice=\"any\") # forcing tool use \n",
+    "        )\n",
+    "    def invoke(self,input: str) -> dict:\n",
+    "        # invoke the agent but iteratively in a loop until final answerr\n",
+    "        \n",
+    "        count = 0\n",
+    "        agent_scratchpad = []\n",
+    "        while count < self.max_iterations:\n",
+    "            # invoke a step for the agent to generate a tool call\n",
+    "            tool_call  = self.agent.invoke({\n",
+    "                \"input\": input,\n",
+    "                \"chat_history\": self.chat_history,\n",
+    "                \"agent_scratchpad\": agent_scratchpad\n",
+    "            })\n",
+    "            # add initial tool call to scratchpad\n",
+    "            agent_scratchpad.append(tool_call)\n",
+    "            # otherwise we execute the tol and add it's output to the agent scartchpad\n",
+    "            tool_name = tool_call.tool_calls[0][\"name\"]\n",
+    "            tool_args = tool_call.tool_calls[0][\"args\"]\n",
+    "            tool_call_id = tool_call.tool_calls[0][\"id\"]\n",
+    "            tool_out = name2tool[tool_name](**tool_args)\n",
+    "            # add the tool output to the agent scratchpad \n",
+    "            tool_exec = ToolMessage(\n",
+    "                content=f\"{tool_out}\",\n",
+    "                tool_call_id=tool_call_id\n",
+    "            )\n",
+    "            agent_scratchpad.append(tool_exec)\n",
+    "            # add a print so we can see intermediate steps\n",
+    "            print(f\"{count}: {tool_name}({tool_args})\")\n",
+    "            count += 1\n",
+    "            # if theh tool call is a final answer we stop\n",
+    "            if tool_name == \"final_answer\":\n",
+    "                break\n",
+    "        # add the final answer to chat history \n",
+    "        final_answer = tool_out[\"answer\"]\n",
+    "        self.chat_history.extend([\n",
+    "            HumanMessage(content=input), \n",
+    "            AIMessage(content=final_answer)\n",
+    "        ])\n",
+    "        # return the final answer dict form \n",
+    "        return json.dumps(tool_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a3cb47a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent_executor = CustomAgentExecutor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "74295b41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: add({'y': 10.0, 'x': 10.0})\n",
+      "1: final_answer({'tools_used': ['add'], 'answer': 'The answer is 20.'})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'{\"answer\": \"The answer is 20.\", \"tools_used\": [\"add\"]}'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_executor.invoke(input=\"What is 10 + 10\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c352251",
+   "metadata": {},
+   "source": [
+    "We then get our answer and the tools that were used — all through our custom agent\n",
+    "executor."
+   ]
   }
  ],
  "metadata": {
