--- a/llm_app.ipynb
+++ b/llm_app.ipynb
@@ -146,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8deadffc",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "system_template = \"Translate the following from English into {language}\"\n",
+    "system_template = \"Translate the following from {source_lang} into {dest_lang}\"\n",
     "\n",
     "prompt_template = ChatPromptTemplate.from_messages(\n",
     "    [(\"system\", system_template), (\"user\", \"{text}\")]\n",
