RunnableParallel and RunnablePassThrough

--- a/lecl.ipynb
+++ b/lecl.ipynb
@@ -580,6 +580,154 @@
    "source": [
     "Those are our `RunnableLambda` functions. It's worth noting that all inputs to these functions are expected to be a SINGLE arguments. If you have a function that accepts multiple arguments, you can input a dictionary with keys, then unpack them inside the function."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91079ddc",
+   "metadata": {},
+   "source": [
+    "## LCEL `RunnableParallel` and `RunnablePassthrough`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd026def",
+   "metadata": {},
+   "source": [
+    "LCEL provides us with various `Runnable` classes that allow us to control the flow of data and execution order through our chains. Two of these are `RunnableParallel` and `RunnablePassthrough`.\n",
+    "\n",
+    "* `RunnableParallel` — allows us to run multiple `Runnable` instances in parallel. Acting almost as a Y-fork in the chain.\n",
+    "\n",
+    "* `RunnablePassthrough` — allows us to pass through a variable to the next `Runnable` without modification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "dd1a0541",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fadel/Documents/GitHub/langchain/venv/lib/python3.12/site-packages/pydantic/_migration.py:283: UserWarning: `pydantic.error_wrappers:ValidationError` has been moved to `pydantic:ValidationError`.\n",
+      "  warnings.warn(f'`{import_path}` has been moved to `{new_location}`.')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
+    "from langchain.vectorstores import DocArrayInMemorySearch\n",
+    "\n",
+    "embeddings = GoogleGenerativeAIEmbeddings(model=\"models/gemini-embedding-exp-03-07\")\n",
+    "vecstore_a = DocArrayInMemorySearch.from_texts(\n",
+    "    [\n",
+    "        \"half the info is here\",\n",
+    "        \"DeepSeek-V3 was released in December 2024\"\n",
+    "    ],\n",
+    "    embedding=embeddings\n",
+    ")\n",
+    "vecstore_b = DocArrayInMemorySearch.from_texts(\n",
+    "    [\n",
+    "        \"the other half of the info is here\",\n",
+    "        \"the DeepSeek-V3 LLM is a mixture of experts model with 671B parameters\"\n",
+    "    ],\n",
+    "    embedding=embeddings\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5eb56cd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_str = \"\"\"Using the context provided, answer the user's question.\n",
+    "Context:\n",
+    "{context_a}\n",
+    "{context_b}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8765bf52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate, SystemMessagePromptTemplate, HumanMessagePromptTemplate\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    SystemMessagePromptTemplate.from_template(prompt_str),\n",
+    "    HumanMessagePromptTemplate.from_template(\"{question}\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "be9b1133",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.runnables import RunnablePassthrough, RunnableParallel\n",
+    "\n",
+    "retriever_a = vecstore_a.as_retriever()\n",
+    "retriever_b = vecstore_b.as_retriever()\n",
+    "\n",
+    "retrieval = RunnableParallel(\n",
+    "    {\n",
+    "        \"context_a\": retriever_a, \"context_b\": retriever_b, \"question\": RunnablePassthrough()\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dde19c9f",
+   "metadata": {},
+   "source": [
+    "The chain we'll be constructing will look something like this:\n",
+    "\n",
+    "![](https://github.com/aurelio-labs/langchain-course/blob/main/assets/lcel-flow.png?raw=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f89f6f52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = retrieval | prompt | llm | output_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "38c606f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The DeepSeek-V3 LLM, released in December 2024, is a mixture of experts model with 671B parameters.'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = chain.invoke(\n",
+    "    \"what architecture does the model DeepSeek released in december use?\"\n",
+    ")\n",
+    "result"
+   ]
   }
  ],
  "metadata": {
